# qtapms-foundations

./: LICENSE  README.md
docs/: QTAPMS_History_Document.md
license/GNU-General-Public-License-v3.0/: .GNU General Public License v3.0.swp
manifestos/: QTAPMS_Manifesto.md
sim/: CMakeLists.txt
sim/src/: main.cpp
sim/src/lib/glad/include/glad/: gl.h
